Add scheduled activation for services
